<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_playlist"
        android:icon="@drawable/ic_list_add_black_red_24dp"
        android:title="@string/add_more_songs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/subtract_playlist"
        android:icon="@drawable/ic_list_subtract_black_red_24dp"
        android:title="@string/remove_selected_songs"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_list_sort_black_24dp"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_artist"
                android:icon="@drawable/ic_list_sort_black_24dp"
                android:title="@string/artist" />
            <item
                android:id="@+id/sort_album"
                android:icon="@drawable/ic_list_sort_black_24dp"
                android:title="@string/album" />
            <item
                android:id="@+id/sort_genre"
                android:icon="@drawable/ic_list_sort_black_24dp"
                android:title="@string/genre" />
            <item
                android:id="@+id/sort_title"
                android:icon="@drawable/ic_list_sort_black_24dp"
                android:title="@string/title" />
        </menu>

    </item>

</menu>